# solana-oracle-challenge

./: Anchor.toml  Cargo.toml  solana-gpt.ts
programs/solana-oracle-challenge/: Cargo.toml
programs/solana-oracle-challenge/src/: lib.rs
programs/solana-oracle-challenge/src/instructions/: call_back.rs  close.rs  initialize.rs  interact_agent.rs  mod.rs  schedule.rs
tests/: solana-oracle-challenge.ts
